part1/exercise-1.09/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-server
  template:
    metadata:
      labels:
        app: project-server
    spec:
      containers:
        - name: project-server
          image: luisnvrr/exercise1.02:0.1
