part1/exercise-1.09/project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 3456
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-server-svc
            port:
              number: 2345
